--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
     <title>Webhook Data</title>
 </head>
 <body>
-    <h1>Webhook Data</h1>
-    <div id="webhook-data">
-        <pre>{{ data }}</pre>
-    </div>
+    <h1>Received Webhooks</h1>
+    <ul>
+        {% for webhook in webhooks %}
+            <li>{{ webhook }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
